--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Procedural Animation</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.4/p5.min.js" defer></script>
-    <script src="sketch.js" defer></script>
+    <script src="Utils.js" defer></script>
     <script src="Circle.js" defer></script>
     <script src="Chain.js" defer></script>
     <script src="Snake.js" defer></script>
+    <script src="Fish.js" defer></script>
+    <script src="Lizard.js" defer></script>
+    <script src="sketch.js" defer></script>
 </head>
 <body>
     
 </body>
 </html>
+
+<!-- 
+IMPLEMENT ANGLE CONSTRAIN 
+Dorsal Fin
+Caudal Fin
+Draw Lizard Arms
+-->
